--- a/public/css/Component/CenterManager/CenterManager_Collector.css
+++ b/public/css/Component/CenterManager/CenterManager_Collector.css
@@ -159,7 +159,7 @@
         text-align: center;
         height: 55px;
         display: grid;
-        grid-template-columns: 10% 15% 8% 14% 15% 8% 9% 10% 5% 5%;
+        grid-template-columns: 12.5% 14.5% 16% 15% 12.5% 12.5% 8% 8%;
     }
 
     .table-header th {
@@ -173,17 +173,22 @@
         font-size: 1px;
         font-family: Montserrat;
         text-align: center;
-        height: 52px;
+        height: 100px;
         display: grid;
-        grid-template-columns: 10% 15% 8% 14% 15% 8% 9% 10% 5% 5%;
+        grid-template-columns: 12.5% 14.5% 16% 15% 12.5% 12.5% 8% 8%;
         border-bottom: 2px solid #CACACA;
+    }
 
-
+    .collector_image img {
+        width: 67px !important;
+        height: 67px !important;
+        border-radius: 50%;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     }
 
     .table td {
-        height: 50px;
-        font-size: 16px;
+        height: 100px;
+        font-size: 17px;
         vertical-align: middle;
         text-align: center;
         display: flex;
@@ -400,7 +405,7 @@
 
     }
 
-    .popup-form{
+    .popup-form {
         width: 50%;
         background: white;
         border-radius: 6px;
@@ -411,34 +416,34 @@
         color: #333;
         transition: transform 0.4s, top 0.4s;
     }
-    
-    .popup-form h2{
+
+    .popup-form h2 {
         font-size: 23px;
         font-weight: 600;
         margin: 10px 0 10px;
         margin-top: 25px;
     }
-    
-    .popup-form img{
+
+    .popup-form img {
         width: 25px;
         height: 25px;
         position: absolute;
         top: 10px;
         right: 10px;
-        width: 20px; 
+        width: 20px;
         height: 20px;
     }
-    
-    .btns1{
+
+    .btns1 {
         display: flex;
         vertical-align: top;
         flex-direction: row;
         margin-bottom: 30px;
         padding: 0 27px 0 27px;
-        
+
     }
-    
-    .updatebtn{
+
+    .updatebtn {
         width: 50%;
         margin-right: 20px;
         padding: 10px 0;
@@ -450,10 +455,10 @@
         border-radius: 4px;
         cursor: pointer;
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-    
+
     }
-    
-    .cancelbtn1{
+
+    .cancelbtn1 {
         width: 50%;
         padding: 10px 0;
         background: #bab3b3;
@@ -464,46 +469,46 @@
         border-radius: 4px;
         cursor: pointer;
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-    
+
     }
-    
+
     .updateData {
         margin-bottom: 25px;
         width: calc(100% / 2 - 10px);
-       
+
     }
-    
-    .update-topic-line{
+
+    .update-topic-line {
         width: 93px;
         height: 4px;
         background-color: #1B6652;
         margin-bottom: 15px;
-    
+
     }
-    
-    .updateData input{
-        width: 80%;   
+
+    .updateData input {
+        width: 80%;
         padding: 6px 12px;
         font-size: 16px;
         font-weight: 400;
-        line-height: 1.5;  
+        line-height: 1.5;
         background-color: #fff;
         border: 1px solid #ced4da;
         border-radius: 4px;
-        
+
     }
-    
-    
-    .updateData label{
-    
+
+
+    .updateData label {
+
         display: flex;
         align-items: flex-start;
         margin-left: 25px;
         font-weight: 500;
         margin-bottom: -10px;
     }
-    
-    .updatePopupform-div{
+
+    .updatePopupform-div {
         display: flex;
         flex-direction: column;
         width: 100%;
@@ -512,42 +517,43 @@
         padding-top: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
-    
-    .top-personal-details{
+
+    .top-personal-details {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
         margin: 20px 0 7px 0;
     }
-    
-    .bottom-vehicle-details{
+
+    .bottom-vehicle-details {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
         margin: 20px 0 12px 0;
-    
+
     }
-    
-    .personal-details{
+
+    .personal-details {
         font-size: 18px;
         font-weight: 550;
         position: relative;
         margin-inline-end: auto;
         margin-top: 10px;
         margin-left: 25px;
-        
+
     }
-    
-    .vehicle-details{
+
+    .vehicle-details {
         font-size: 18px;
         font-weight: 550;
         position: relative;
         margin-inline-end: auto;
         margin-left: 25px;
-        
+
     }
-    
-    .personal-details::before, .vehicle-details::before{
+
+    .personal-details::before,
+    .vehicle-details::before {
         content: '';
         position: absolute;
         margin-top: 23px;
@@ -555,24 +561,24 @@
         height: 3px;
         width: 30px;
         background: #1B6652;
-    
-    
+
+
     }
-     
-    @media screen and(max-width: 957px){
-    
+
+    @media screen and(max-width: 957px) {
+
         .updateData {
-            margin-left:10px;
-    
+            margin-left: 10px;
+
         }
-    
-        .top-personal-details{
+
+        .top-personal-details {
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: center;
         }
-    
+
     }
 
     /*Update success*/
@@ -637,7 +643,7 @@
     }
 
     /*personal details popup*/
-    .personal-details-popup-box{
+    .personal-details-popup-box {
         position: fixed;
         top: 0;
         left: 0;
@@ -650,7 +656,7 @@
         height: 100%;
     }
 
-    .personal-details-popup-form{
+    .personal-details-popup-form {
         width: 45%;
         background: white;
         border-radius: 6px;
@@ -665,18 +671,18 @@
         justify-content: center;
         transition: transform 0.4s, top 0.4s;
     }
-     
-    .personal-details-popup-form-close{
+
+    .personal-details-popup-form-close {
         width: 25px;
         height: 25px;
         position: absolute;
         top: 10px;
         right: 10px;
-        width: 20px; 
+        width: 20px;
         height: 20px;
     }
-    
-    .personal-details-popup{
+
+    .personal-details-popup {
         display: grid;
         grid-template-columns: 40% 60%;
         width: 100%;
@@ -686,14 +692,14 @@
         margin-top: 17px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
-    
-    .personal-details-right{
+
+    .personal-details-right {
         display: grid;
         grid-template-columns: 30% 70%;
-        
+
     }
-    
-    .personal-details-right-labels{
+
+    .personal-details-right-labels {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -702,16 +708,16 @@
         padding-bottom: 50px;
         padding-left: 25px;
     }
-    
-    .personal-details-right-labels span{
+
+    .personal-details-right-labels span {
         margin-bottom: 15px;
         font-size: 15px;
         color: #7c7c7d;
-        
+
     }
-    
-    
-    .personal-details-right-values{
+
+
+    .personal-details-right-values {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -719,59 +725,59 @@
         padding-top: 40px;
         padding-bottom: 50px;
         padding-left: 32px;
-       
+
     }
-    
-    .personal-details-right-values span{
+
+    .personal-details-right-values span {
         margin-bottom: 15px;
         font-size: 15px;
-        color: #767e95; 
+        color: #767e95;
         font-weight: 550;
-     
+
     }
-    
-    .personal-details-left{
+
+    .personal-details-left {
         display: flex;
         align-items: center;
         justify-content: center;
         padding: 10px;
         flex-direction: column;
-           
+
     }
-    
-    .personal-details-left p{
+
+    .personal-details-left p {
         margin-top: 5px;
         font-size: 15px;
         color: #7c7c7d;
     }
-    
-    .personal-details-left span{
-        color: #767e95; 
+
+    .personal-details-left span {
+        color: #767e95;
         font-weight: 550;
-    
+
     }
-    
-    
-    .profile-pic{
+
+
+    .profile-pic {
         width: 70%;
         height: auto;
         border-radius: 50%;
         overflow: hidden;
         margin-bottom: 8px;
         box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-    
+
     }
-    
-    .personal-details-topic{
+
+    .personal-details-topic {
         font-size: 18px;
         font-weight: 500;
         position: relative;
         margin-inline-end: auto;
         margin-top: 15px;
-        
+
     }
-    
-    .personal-details-topic::before{
+
+    .personal-details-topic::before {
         content: '';
         position: absolute;
         margin-top: 23px;
@@ -780,21 +786,21 @@
         height: 3px;
         width: 45px;
         background: #1B6652;
-    
+
     }
-    
-    
-    @media screen and(max-width: 917px){
-    
-        .personal-details-popup{
+
+
+    @media screen and(max-width: 917px) {
+
+        .personal-details-popup {
             display: flex;
             flex-direction: column;
         }
-    
+
     }
 
     /*Vehicle details popup*/
-    .vehicle-details-popup-box{
+    .vehicle-details-popup-box {
         position: fixed;
         top: 0;
         left: 0;
@@ -808,8 +814,8 @@
 
     }
 
-    .vehicle-details-popup-form{
-        width:30%;
+    .vehicle-details-popup-form {
+        width: 30%;
         background: white;
         border-radius: 6px;
         position: relative;
@@ -823,18 +829,18 @@
         align-items: center;
         justify-content: center;
     }
-    
-    .vehicle-details-popup-form-close{
+
+    .vehicle-details-popup-form-close {
         width: 25px;
         height: 25px;
         position: absolute;
         top: 10px;
         right: 10px;
-        width: 20px; 
+        width: 20px;
         height: 20px;
     }
-    
-    .vehicle-details-popup{
+
+    .vehicle-details-popup {
         display: grid;
         grid-template-columns: 40% 60%;
         width: 100%;
@@ -844,8 +850,8 @@
         margin-top: 17px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
-    
-    .vehicle-details-labels{
+
+    .vehicle-details-labels {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -854,16 +860,16 @@
         padding-bottom: 50px;
         padding-left: 60px;
     }
-    
-    .vehicle-details-labels span{
+
+    .vehicle-details-labels span {
         margin-bottom: 15px;
         font-size: 15px;
         color: #7c7c7d;
-        
+
     }
-    
-    
-    .vehicle-details-values{
+
+
+    .vehicle-details-values {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -871,28 +877,28 @@
         padding-top: 40px;
         padding-bottom: 50px;
         padding-left: 60px;
-       
+
     }
-    
-    .vehicle-details-values span{
+
+    .vehicle-details-values span {
         margin-bottom: 15px;
         font-size: 15px;
-        color: #767e95; 
+        color: #767e95;
         font-weight: 550;
-     
+
     }
-    
-    
-    .vehicle-details-topic{
+
+
+    .vehicle-details-topic {
         font-size: 18px;
         font-weight: 500;
         position: relative;
         margin-inline-end: auto;
         margin-top: 15px;
-        
+
     }
-    
-    .vehicle-details-topic::before{
+
+    .vehicle-details-topic::before {
         content: '';
         position: absolute;
         margin-top: 23px;
@@ -901,20 +907,20 @@
         height: 3px;
         width: 45px;
         background: #1B6652;
-    
+
     }
-    
-    
-    @media screen and(max-width: 1307px){
-    
-        .vehicle-details-labels{
+
+
+    @media screen and(max-width: 1307px) {
+
+        .vehicle-details-labels {
             padding-left: 40px;
         }
-    
-        .vehicle-details-values{
+
+        .vehicle-details-values {
             padding-left: 40px;
         }
     }
-    
+
 
 }
