--- a/public/css/Component/CenterManager/CenterManager_Collector.css
+++ b/public/css/Component/CenterManager/CenterManager_Collector.css
@@ -440,7 +440,6 @@
         flex-direction: row;
         margin-bottom: 30px;
         padding: 0 27px 0 27px;
-
     }
 
     .updatebtn {
@@ -469,13 +468,11 @@
         border-radius: 4px;
         cursor: pointer;
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-
     }
 
     .updateData {
         margin-bottom: 25px;
         width: calc(100% / 2 - 10px);
-
     }
 
     .update-topic-line {
@@ -483,7 +480,6 @@
         height: 4px;
         background-color: #1B6652;
         margin-bottom: 15px;
-
     }
 
     .updateData input {
@@ -495,12 +491,10 @@
         background-color: #fff;
         border: 1px solid #ced4da;
         border-radius: 4px;
-
     }
 
 
     .updateData label {
-
         display: flex;
         align-items: flex-start;
         margin-left: 25px;
@@ -530,7 +524,6 @@
         flex-wrap: wrap;
         justify-content: space-between;
         margin: 20px 0 12px 0;
-
     }
 
     .personal-details {
@@ -540,7 +533,6 @@
         margin-inline-end: auto;
         margin-top: 10px;
         margin-left: 25px;
-
     }
 
     .vehicle-details {
@@ -549,7 +541,6 @@
         position: relative;
         margin-inline-end: auto;
         margin-left: 25px;
-
     }
 
     .personal-details::before,
@@ -743,6 +734,11 @@
         padding: 10px;
         flex-direction: column;
 
+    }
+
+    .personal-details-left img {
+        width: 150px;
+        height: 150px;
     }
 
     .personal-details-left p {
