--- a/public/css/Component/Customer/Customer_Transfercredit.css
+++ b/public/css/Component/Customer/Customer_Transfercredit.css
@@ -1,194 +1,196 @@
 .Customer_Transfercredit {
-    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap');
-
-    * {
-        margin: 0;
-        padding: 0;
-        font-family: Inter;
-    }
-
-    .main {
-        width: 100%;
-        height: 727px;
-        display: grid;
-        grid-template-rows: 12% 88%;
-    }
-
-    .main-top {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        font-family: Inter;
-    }
-
-    .main-top img {
-        width: 35px;
-        height: 35px;
-        margin-left: 30px;
-    }
-
-    .main-top-component {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        margin-right: 20px;
-    }
-
-    .back-button {
-        cursor: pointer;
-    }
-
-    .main-top-component img {
-        width: 50px;
-        height: 50px;
-        margin-left: 10px;
-    }
-
-    .main-top-component p {
-        font-family: inter;
-        font-size: 17px;
-    }
-
-    .main-bottom {
-        display: grid;
-        grid-template-columns: 40% 60%;
-    }
-
-    .main-bottom-left {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .main-bottom-right {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .main-bottom-left-component {
-        width: 80%;
-        height: 95%;
-        background: #DFFFD3;
-        border-radius: 20px;
-        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        color: #2B2B2B;
-        margin-left: 70px;
-        margin-bottom: 10px;
-    }
-
-    .main-bottom-left-component img {
-        height: 180px;
-        width: 180px;
-        margin-top: 30px;
-    }
-
-    .main-bottom-left-component h2 {
-        font-size: 28px;
-        color: #2B2B2B;
-        margin-bottom: 15px;
-    }
-
-    .line {
-        width: 71.01px;
-        height: 5.46px;
-        background: #1B6652;
-        margin-bottom: 35px;
-    }
-
-    .main-bottom-left-component-component {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        text-align: left;
-        width: 80%;
-        margin-bottom: 15px;
-
-    }
-
-    .main-bottom-left-component p {
-        font-size: 17px;
-        font-family: inter;
-        margin-bottom: 15px;
-        width: 300px;
-        margin-right: 12%;
-    }
-
-    .main-bottom-left-component input {
-        height: 40px;
-        width: 90%;
-        background: #F4F4F4;
-        border: 1px solid #1B6652;
-        border-radius: 5px;
-    }
-
-    .main-bottom-left-component button {
-        width: 190.59px;
-        height: 58.27px;
-        background: #1B6652;
-        font-size: 22px;
-        color: white;
-        font-weight: 550;
-        border: none;
-        border-radius: 10px;
-        margin-top: 20px;
-        cursor: pointer;
-    }
-
-    @media screen and (max-width: 1138px) {
-        .main-bottom-right {
-            display: none;
+        @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Leckerli+One&family=Open+Sans&family=Phudu&family=Poppins&family=Roboto:ital@0;1&family=Rubik:wght@500&family=Shrikhand&display=swap");
+    
+        * {
+            margin: 0;
+            padding: 0;
+            font-family: Inter;
         }
-
-        .main-bottom-left {
+    
+        .main {
+            width: 100%;
+            height: 731px;
+            display: grid;
+            grid-template-rows: 10% 90%;
+        }
+    
+        .main-top {
             display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            font-family: Inter;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    
+        }
+    
+        .main-top img {
+            width: 32px;
+            height: 32px;
+            margin-left: 30px;
+        }
+    
+        .main-top-component {
+            display: flex;
+            flex-direction: row;
             align-items: center;
             justify-content: center;
-            width: 70%;
+            margin-right: 20px;
         }
-
+    
+        .main-top-component img {
+            width: 40px;
+            height: 40px;
+            margin-left: 15px;
+        }
+    
+        .main-top-component p {
+            font-size: 18px;
+            font-family: inter;
+            letter-spacing: 0.1px;
+        }
+    
+        .back_button {
+            cursor: pointer;
+        }
+    
         .main-bottom {
             display: flex;
             align-items: center;
             justify-content: center;
-            margin-bottom: 0;
         }
-
-        .main-bottom-left-component h2 {
-            font-size: 17px;
-            height: 100%;
+    
+        .main-bottom-component {
+            width: 65%;
+            height: 75%;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            padding: 25px;
+            display: grid;
+            grid-template-columns: 50% 50%;
         }
-
-        .main-bottom-left-component {
-            width: 100%;
-            height: 100%;
-            margin-bottom: 0;
+    
+    
+        .main-bottom-component-right {
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
-
-        .main-bottom-left-component button {
-            width: 190.59px;
-            height: 50px;
+    
+        .main-bottom-component-right img {
+            width: 75%;
+            height: 75%;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+    
+        }
+    
+        .main-bottom-component-left {
+            display: flex;
+            flex-direction: column;
+            justify-content: center; /* Center vertically */
+            align-items: center; /* Center horizontally */
+            margin: auto; /* This may help in centering it within its parent container */
+        }
+        
+    
+        .main-bottom-component-left-topic {
+            margin-bottom: 35px;
+        }
+    
+        .line {
+            height: 4px;
+            width: 60px;
             background: #1B6652;
-            font-size: 22px;
-            color: white;
-            font-weight: 550;
-            border: none;
-            margin-bottom: 15px;
-            cursor: pointer;
+            margin-top: 3px;
         }
-
-        .main-bottom-left-component p {
+    
+        .main-bottom-component-left-topic h2 {
+            
+            font-size: 28px;
+            font-weight: 500;
+        }
+    
+        .main-bottom-component-left-component {
+            width: 400px;
+            display: flex;
+            flex-direction: column;
+        }
+    
+        .main-bottom-component-left-component {
+            width: 100%; /* Adjust width as needed */
+            display: flex;
+            flex-direction: column;
+            text-align: left; /* Align text within the container to the left */
+            margin-bottom: 10px;
+        }
+        .main-bottom-component-left-component p {
+            font-weight: 500;
+            margin-bottom: 5px;
             font-size: 17px;
-            font-family: inter;
-            margin-bottom: 15px;
-            width: auto;
-            margin-right: 0;
+            margin-bottom: 7px;
         }
+    
+        .main-bottom-component-left-component h4 {
+            font-weight: 500;
+            margin-bottom: 5px;
+            font-size: 17px;
+            margin-bottom: 7px;
+        }
+    
+        .main-bottom-component-left-component input {
+            height: 35px;
+            width: 100%;
+            outline: none;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            padding-left: 15px;
+            font-size: 16px;
+            border-bottom-width: 2px;
+            transition: all 0.3s ease;
+            margin-bottom: 6px;
+        }
+    
+        .main-bottom-component-left-component input:focus {
+            border-color: #4dccaa;
+        }
+    
+        .complain {
+            height: 66px !important;
+        }
+    
+        .err {
+            height: 10px;
+            font-size: 15px;
+            font-weight: 500;
+            margin-bottom: 5px;
+            color: #e74c3c;
+        }
+    
+        .main-bottom-component-left-button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 5px;
+        }
+    
+        .main-bottom-component-left button {
+            height: 40px;
+            width:245px;
+            outline: none;
+            color: white;
+            font-size: 18px;
+            font-weight: 500;
+            border-radius: 5px;
+            cursor: pointer;
+            border: none;
+            letter-spacing: 1px;
+            background: #1B6652;
+            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+            margin-right: 9%;
+            margin-top: 10px;
+            margin-left: 15%;
+        }
+        
+    
     }
-}
