Edit profile center manager collector customer

--- a/public/css/Component/Customer/Customer_Main.css
+++ b/public/css/Component/Customer/Customer_Main.css
@@ -15,7 +15,7 @@
     }
 
     .main-left {
-        background: #8CF889;
+        background: #3ae374;
         display: flex;
         flex-direction: column;
     }
