--- a/public/css/Component/Customer/Customer_Editprofile.css
+++ b/public/css/Component/Customer/Customer_Editprofile.css
@@ -25,18 +25,23 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        padding-left: 82%;
+        justify-content: flex-end;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     .main-right-top img {
         width: 50px;
         height: 50px;
-        margin-left: 10px;
+        margin-left: 5px;
+        border-radius: 50%;
+        margin-right: 10px;
     }
 
     .main-right-top p {
+        font-size: 18px;
         font-family: inter;
-        font-size: 17px;
+        letter-spacing: 0.1px;
+        margin-left: 15px;
     }
 
     .main-right-bottom {
@@ -46,8 +51,11 @@
     }
 
     .main-right-bottom-content {
-        width: 60%;
-        height: 90%;
+        width: 58%;
+        height: 85%;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        border-radius: 10px;
     }
 
     .main-right-bottom-content {
@@ -58,7 +66,7 @@
     .main-right-bottom-content-top {}
 
     .main-right-bottom-content-top h1 {
-        font-size: 30px;
+        font-size: 28px;
         margin-bottom: 6px;
         color: #2B2B2B;
     }
@@ -77,11 +85,45 @@
     .main-right-bottom-content-bottom-left {
         display: flex;
         flex-direction: column;
-        padding-top: 35px;
+        padding-top: 15px;
+    }
+
+    .edit-profile-content-profile {
+        display: flex;
+        justify-content: center;
+    }
+
+    .edit-profile-content-profile-container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .edit-profile-main-image {
+        height: 90px;
+        width: 90px;
+        border-radius: 50%;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .edit-profile-second-image {
+        height: 28px;
+        width: 28px;
+        margin-top: -25px;
+        margin-left: 60px;
+        flex: 1;
     }
 
     .edit-profile-content {
-        margin-bottom: 19px;
+        margin-bottom: 12px;
+    }
+
+    .edit-profile-content-profile-container input[type=file] {
+        height: 28px;
+        width: 28px;
+        margin-top: -25px;
+        margin-left: 60px;
+        opacity: 0;
+        cursor: pointer !important;
     }
 
     .edit-profile-content h3 {
@@ -93,50 +135,126 @@
 
     .edit-profile-content input {
         height: 32px;
-        width: 85%;
+        width: 325px;
         border-radius: 5px;
-        border: 1px solid #858585;
-        font-size: 17px;
-        padding-left: 5px;
+        border: 1px solid #ccc;
+        padding-left: 10px;
+        font-size: 16px;
     }
 
+    .err {
+        height: 12px;
+        color: red;
+        font-size: 14px;
+    }
+
+    .edit-profile-content input:focus {
+        border-color: #4dccaa;
+        outline: none;
+    }
 
     .main-right-bottom-content-bottom-left button {
-        width: 46%;
-        height: 40px;
-        background: #1B6652;
-        font-size: 20px;
+        height: 38px;
+        width: 225px;
+        outline: none;
         color: white;
-        border: none;
-        font-weight: 550;
-        margin-top: 30px;
+        font-size: 19px;
+        font-weight: 500;
         border-radius: 5px;
         cursor: pointer;
+        border: none;
+        letter-spacing: 1px;
+        background: #1B6652;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+        margin-top: 10px;
     }
 
     .main-right-bottom-content-bottom-right {
         display: flex;
         flex-direction: column;
-        padding-top: 35px;
-        padding-left: 55px;
+        padding-top: 111px;
+        padding-left: 25px;
     }
 
     .main-right-bottom-content-bottom-right button {
-        width: 60%;
-        height: 45px;
-        background: #1B6652;
-        font-size: 20px;
+        height: 38px;
+        width: 225px;
+        outline: none;
         color: white;
-        border: none;
-        font-weight: 550;
-        /* margin-top: 114px; */
-        margin-top: 10px;
+        font-size: 19px;
+        font-weight: 500;
         border-radius: 5px;
         cursor: pointer;
+        border: none;
+        letter-spacing: 1px;
+        background: #1B6652;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+        margin-top: 10px;
+
     }
 
     .main-right-bottom-content {
         overflow: scroll;
+    }
+
+    .center_worker_success {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+    }
+
+    .popup {
+        width: 400px;
+        background: white;
+        font-family: 'poppins', sans-serif;
+        border-radius: 6px;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        transition: transform 0.4s, top 0.4s;
+    }
+
+    .open-popup {
+        visibility: visible;
+        top: 50%;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .popup img {
+        width: 100px;
+        margin-top: 35px;
+        border-radius: 50%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .popup h2 {
+        font-size: 38px;
+        font-weight: 500;
+        margin: 10px 0 10px;
+    }
+
+    .popup button {
+        width: 100%;
+        margin-top: 30px;
+        padding: 10px 0;
+        background: #6fd649;
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+
     }
 
     @media screen and (max-width: 1416px) {
