--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,6 +48,8 @@
 
 @import url('Component/Collector/Collector_Complains.css');
 
+
+@import url('Component/Collector/Collector_Editprofile.css');
 /* Center Manager CSS */
 
 /* Center Manager Main left hand side CSS This is used in left hand side of all the Center Manager uis*/
@@ -63,6 +65,8 @@
 
 @import url('Component/CenterManager/CenterManager_CenterWorker.css');
 @import url('Component/CenterManager/CenterManager_CenterWorker_Add.css');
+
+@import url('Component/CenterManager/CenterManager_EditProfile.css');
 
 /* Admin CSS */
 
