--- a/public/css/Component/Admin/Admin_Customer.css
+++ b/public/css/Component/Admin/Admin_Customer.css
@@ -109,9 +109,10 @@
         font-size: 1px;
         font-family: Montserrat;
         text-align: center;
-        height: 52px;
+        justify-content: center;
+        height: 75px;
         display: grid;
-        grid-template-columns: 10% 10% 15% 13% 12% 14% 10% 8% 8%;
+        grid-template-columns: 10% 10% 8% 15% 10% 12% 14% 7% 8% 6%;
         border-bottom: 2px solid #CACACA;
     }
 
@@ -122,8 +123,10 @@
         text-align: center;
         height: 55px;
         display: grid;
-        grid-template-columns: 10% 10% 15% 13% 12% 14% 10% 8% 8%;
+        grid-template-columns: 10% 10% 8% 15% 10% 12% 14% 7% 8% 6%;
     }
+
+
 
     .table {
         padding-left: 1%;
@@ -141,7 +144,7 @@
     }
 
     .table td {
-        height: 50px;
+        height: 75px;
         font-size: 16px;
         vertical-align: middle;
         text-align: center;
@@ -157,6 +160,96 @@
         cursor: pointer;
     }
 
+    .propic {
+        width: 50px !important;
+        height: 50px !important;
+        border-radius: 50%;
+    }
+
+    .delete_confirm {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+
+    }
+
+    .delete_confirm .popup {
+        width: 400px;
+        background: white;
+        border-radius: 6px;
+        top: 0;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        transition: transform 0.4s, top 0.4s;
+    }
+
+    .delete_confirm .popup a {
+        width: auto;
+    }
+
+    .delete_confirm .open-popup {
+        visibility: visible;
+        top: 50%;
+    }
+
+    .delete_confirm .popup img {
+        width: 100px;
+        margin-top: 35px;
+        border-radius: 50%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .delete_confirm .popup h2 {
+        font-size: 23px;
+        font-weight: 600;
+        margin: 10px 0 10px;
+    }
+
+    .delete_confirm .btns {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .delete_confirm .deletebtn {
+        width: 150px;
+        margin-top: 30px;
+        margin-right: 20px;
+        padding: 10px 0;
+        background: rgb(220, 39, 39);
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .delete_confirm .cancelbtn {
+        width: 150px;
+        margin-top: 30px;
+        padding: 10px 0;
+        background: #bab3b3;
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    }
 
 
     @media screen and (max-width: 1178px) {
