--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,7 @@
 
 @import url('Component/Customer/Customer_Complain_History.css');
 @import url('Component/Customer/Customer_Main_History.css');
-
+@import url('Component/Customer/Customer_Transfer_History.css');
 
 @import url('Component/Customer/Customer_Request_collect.css');
 
