--- a/public/css/Component/Customer/Customer_History_Top.css
+++ b/public/css/Component/Customer/Customer_History_Top.css
@@ -18,6 +18,7 @@
         align-items: center;
         height: 70px;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+
     }
 
     .main-right-top-one img {
@@ -73,7 +74,10 @@
         display: flex;
         flex-direction: row;
         padding-left: 38px;
-        padding-top: 7px;
+        padding-top: 9px;
+        padding-bottom: 11px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+
     }
 
     .main-right-top-three-content {
