--- a/public/css/Component/Customer/Customer_Complain_History.css
+++ b/public/css/Component/Customer/Customer_Complain_History.css
@@ -28,7 +28,6 @@
         grid-template-rows: 10% 90%;
         width: 100%;
         height: 550px;
-
     }
 
     .main-right-bottom-container-top {
@@ -50,13 +49,11 @@
     .main-right-bottom-container-container {
         width: 100%;
         height: 100%;
-
     }
 
     .main-right-bottom-top {
         padding-left: 1%;
         width: 99%;
-
     }
 
     .main-right-bottom-down {
@@ -75,7 +72,7 @@
     }
 
     .table-header {
-        background-color: #B9FFB7;
+        background-color: #A1FFAF;
         font-size: 17px;
         font-family: Montserrat;
         text-align: center;
