--- a/public/css/Component/Customer/Customer_Request_Ongoing.css
+++ b/public/css/Component/Customer/Customer_Request_Ongoing.css
@@ -30,7 +30,7 @@
 }
 
 .table-header {
-    background-color: #B9FFB7;
+    background-color: #A1FFAF;
     font-size: 17px;
     font-family: Montserrat;
     text-align: center;
