--- a/public/css/Component/Customer/Customer_Dashboard.css
+++ b/public/css/Component/Customer/Customer_Dashboard.css
@@ -30,7 +30,6 @@
         display: flex;
         flex-direction: row;
         padding-top: 40px;
-
     }
 
     .main-right-left-one-text {
@@ -44,7 +43,6 @@
     .main-right-right-one {
         display: flex;
         flex-direction: column;
-
         width: 100%;
         height: 100%;
     }
@@ -268,8 +266,8 @@
     }
 
     .main-right-right-one img {
-        width: 70%;
-        width: 70%;
+        width: 110px;
+        height: 110px;
     }
 
     .main-right-right-one h2 {
