--- a/public/css/Component/Customer/Customer_History_Top.css
+++ b/public/css/Component/Customer/Customer_History_Top.css
@@ -16,9 +16,14 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        justify-content: space-between;
         height: 70px;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    }
 
+    .main-right-top-one-search {
+        display: flex;
+        align-items: center;
     }
 
     .main-right-top-one img {
@@ -37,19 +42,18 @@
     }
 
     .main-right-top-one-content {
-        width: 300px;
+
         display: flex;
         flex-direction: row;
         align-items: center;
-        padding-left: 19%;
-        margin-left: 37%;
+
     }
 
     .main-right-top-one-content p {
         font-size: 18px;
         font-family: inter;
         letter-spacing: 0.1px;
-        width: 100%;
+
     }
 
     .main-right-top-one-content img {
