--- a/public/css/Component/Customer/Customer_Request_collect.css
+++ b/public/css/Component/Customer/Customer_Request_collect.css
@@ -47,9 +47,10 @@
     }
 
     .main-top-component img {
-        width: 40px;
-        height: 40px;
+        width: 50px;
+        height: 50px;
         margin-left: 15px;
+        border-radius: 50%;
     }
 
     .main-bottom {
