--- a/public/css/Component/CenterManager/CenterManager_Request_Incomming.css
+++ b/public/css/Component/CenterManager/CenterManager_Request_Incomming.css
@@ -21,8 +21,6 @@
         border-radius: 10px;
     }
 
-
-
     .table-row {
         font-size: 1px;
         font-family: Montserrat;
@@ -42,7 +40,6 @@
         display: grid;
         grid-template-columns: 11% 10% 9% 13% 10% 12% 17% 9% 9%;
     }
-
 
     td img {
         margin: 7px;
@@ -92,19 +89,23 @@
     }
 
     .cancel-confirm-content {
-        background-color: #ecf0f1;
-        width: 40%;
-        height: 325px;
-        border-radius: 20px;
+        width: 500px;
+        background: white;
+        font-family: 'poppins', sans-serif;
+        border-radius: 6px;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        transition: transform 0.4s, top 0.4s;
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
-        flex-direction: column;
     }
 
     .cancel-confirm-content input {
         width: 70%;
-        height: 124px;
+        height: 40px;
         margin-bottom: 10px;
         margin: 12px;
         text-align: center;
@@ -113,19 +114,21 @@
         border: 1px solid black;
     }
 
-    .confim-cancell-content h1 {
-        margin-bottom: 20px;
+    .cancel-confirm-content h1 {
+
+        font-size: 32px;
+        font-weight: 500;
     }
 
-    .confim-cancell-content-box {
+    .confim-cancel-content-box {
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: row;
     }
 
-    .confim-cancell-content-box button {
-        width: 120px;
+    .cancel-confirm-content button {
+        width: 45%;
         height: 35px;
         font-size: 18px;
         border-radius: 5px;
@@ -133,9 +136,16 @@
         align-items: center;
         justify-content: center;
         border: none;
-        margin: 10px;
+        margin-top: 10px;
         background-color: #74b9ff;
         cursor: pointer;
+    }
+
+    .cancel-confirm-content-warning {
+        width: 100px;
+        height: 100px;
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 
     .View {
@@ -152,23 +162,30 @@
     }
 
     .View-content {
-        background-color: white;
-        width: 45%;
-        height: 350px;
-        border-radius: 20px;
+        width: 500px;
+        background: white;
+        font-family: 'poppins', sans-serif;
+        border-radius: 6px;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        transition: transform 0.4s, top 0.4s;
         display: flex;
-        align-items: center;
         flex-direction: column;
-        color: #2B2B2B;
+        align-items: center;
+        justify-content: center;
     }
 
     .View-content h2 {
-        margin-bottom: 40px;
-        font-size: 30px;
+        font-size: 32px;
+        font-weight: 500;
     }
 
     .View-content h3 {
+        font-size: 24px;
         margin-bottom: 25px;
+        margin-top: 25px;
+        font-weight: 500;
     }
 
     select {
@@ -182,8 +199,15 @@
         width: 27px;
         height: 27px;
         cursor: pointer;
-        margin-left: 94%;
+        margin-left: 99%;
         margin-top: 10px;
+        align-self: right;
+    }
+
+    .view_assing {
+        width: 100px;
+        height: 100px;
+        margin-top: 15px;
     }
 
     .View-content-content {
@@ -192,21 +216,61 @@
         justify-content: center;
         flex-direction: row;
         margin-top: 35px;
-
     }
 
-
     .View-content button {
-        width: 28%;
-        height: 40px;
-        border-radius: 10px;
-        border: none;
-        font-size: 20px;
-        font-weight: 501;
-        background-color: #106234;
+        height: 41px;
+        width: 55%;
+        outline: none;
         color: white;
+        font-size: 19px;
+        font-weight: 500;
+        border-radius: 5px;
         cursor: pointer;
-        margin-top: 40px;
+        border: none;
+        letter-spacing: 1px;
+        background: #1B6652;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+        margin-top: 10px;
+    }
+
+    #dropdown {
+        width: 200px;
+        font-size: 16px;
+        font-family: Arial, sans-serif;
+        padding: 8px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        appearance: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        background-color: #fff;
+        cursor: pointer;
+        border-radius: 10px;
+        text-align: center;
+        margin-bottom: 25px;
+    }
+
+    #dropdown:hover {
+        background-color: #f9f9f9;
+    }
+
+    #dropdown::after {
+        content: '\25BC';
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        pointer-events: none;
+    }
+
+    #dropdown option {
+        padding: 8px;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    #dropdown option:hover {
+        background-color: #f0f0f0;
     }
 
     @media screen and (max-width:862px) {
